Fixed alignment issue on login component

--- a/src/app/auth/login.component.css
+++ b/src/app/auth/login.component.css
@@ -1,21 +1,13 @@
 .login-body {
-    margin-left: -250px;
+    /* margin-left: -250px; */
     margin-top: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width : 574px) {
     .login-body {
-        margin-left: 0px;
-    }
-}
-
-@media only screen and (max-width : 991px) {
-    .login-body {
-        /* margin-left: 0px;
-        margin-top: 50px; */
         padding: 0 20px;
     }
 }
