--- a/src/app/core/sidenav/sidenav.component.scss
+++ b/src/app/core/sidenav/sidenav.component.scss
@@ -58,6 +58,7 @@ $sidebar-width: 14rem;
 
 .sidebar.toggle {
     width: 0;
+    overflow: hidden;
 }
 
 .main-content {
