--- a/src/app/shared/components/report-filter/report-filter.component.scss
+++ b/src/app/shared/components/report-filter/report-filter.component.scss
@@ -1,4 +1,4 @@
 .fixed-height {
-    height: 64vh;
+    height: 57vh;
     overflow: auto;
 }
